# tea

./: README.md  Readme.MD  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
scripts/: optimize.py  score.py
skills/token-efficiency-agent/: SKILL.md
tea/: __init__.py  _edgetest.py  _logtest.py  _selftest.py  cli.py  logbook.py  optimizer.py  tokens.py
tea/integrations/: __init__.py  anthropic_wrap.py  autogen_hook.py  crewai_hook.py  langchain_cb.py  openai_wrap.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  package.json
